Placeholder for locations, Geoloc support

--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,9 @@
             </center>
             <center class="flow-text" style="margin-top: 10px">Initialisation en cours</center>
         </div>
+        <div class="row no-margin-bottom">
+            <div class="modal" id="modal_placeholder"></modal>
+        </div>
     </main>
     <footer></footer>
 
