Sidenav background, replacement of images/ folder by form_data

--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,15 @@
         </div>
     </nav>
     <ul class="sidenav" id="mobile-menu">
+        <li>
+            <div class="user-view">
+                <div class="background">
+                    <img src="img/sidenav_background.jpg">
+                </div>
+                <a href="#!"><img class="circle" src="img/logo.png"></a>
+                <a href="#!"><span class="white-text email">Busy Bird</span></a>
+            </div>
+        </li>
         <li id="nav_home"><a href="#!">Accueil</a></li>
         <li id="nav_form_new"><a href="#!">Nouvelle entrée</a></li>
         <li id="nav_form_saved"><a href="#!">Enregistrés</a></li>
@@ -78,7 +87,8 @@
             <center class="flow-text" style="margin-top: 10px">Initialisation en cours</center>
         </div>
         <div class="row no-margin-bottom">
-            <div class="modal" id="modal_placeholder"></modal>
+            <div class="modal" id="modal_placeholder"></div>
+            <div class="modal bottom-sheet" id="bottom_modal_placeholder"></div>
         </div>
     </main>
     <footer></footer>
