--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
     <nav class="lime darken-1">
         <div class="nav-wrapper">
             <a href="#" data-target="mobile-menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
-            <a href="#" id="nav_title" class="nav-header-title"></a>
+            <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
         </div>
     </nav>
     <ul class="sidenav" id="mobile-menu">
@@ -71,7 +71,7 @@
 
     <main>
         <div id="main_block">
-            <center style="margin-top: 35vh;">
+            <center style="margin-top: 30vh;">
                 <div class="preloader-wrapper active">
                     <div class="spinner-layer spinner-blue-only">
                         <div class="circle-clipper left">
@@ -84,7 +84,12 @@
                     </div>
                 </div>
             </center>
-            <center class="flow-text" style="margin-top: 10px">Initialisation en cours</center>
+            <center class="flow-text" style="margin-top: 10px">
+                Bienvenue dans Busy Bird
+            </center>
+            <center style="margin-top: 5px">
+                Initialisation
+            </center>
         </div>
         <div class="row no-margin-bottom">
             <div class="modal" id="modal_placeholder"></div>
