--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/materialize.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <!--<link rel="stylesheet" type="text/css" href="css/navbar.css" />-->
     <script src="js/artyom.window.min.js"></script>
 
     <title>Busy Bird</title>
@@ -52,6 +53,8 @@
         <div class="nav-wrapper">
             <a href="#" data-target="mobile-menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
             <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
+
+            <a href="#" class="return-trigger always"><i class="material-icons">arrow_back</i></a>
         </div>
     </nav>
     <ul class="sidenav" id="mobile-menu">
@@ -97,7 +100,15 @@
             <div class="modal bottom-sheet" id="bottom_modal_placeholder"></div>
         </div>
     </main>
-    <footer></footer>
+
+    <footer>
+        <!-- <div class="bottombar">
+            <a href="#!" id="nav_home">Accueil</a>
+            <a href="#!" id="nav_form_new">Ajouter</a>
+            <a href="#!" id="nav_form_saved">Enregistrés</a>
+            <a href="#!" id="nav_settings">Paramètres</a>
+        </div> -->
+    </footer>
 
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/audiomp3.min.js"></script>
