--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
             <a href="#" data-target="mobile-menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
             <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
 
-            <a href="#" class="return-trigger always"><i class="material-icons">arrow_back</i></a>
+            <a href="#" id="__nav_back_button" class="return-trigger always hide"><i class="material-icons">arrow_back</i></a>
         </div>
     </nav>
     <ul class="sidenav" id="mobile-menu">
