--- a/www/index.html
+++ b/www/index.html
@@ -113,6 +113,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/audiomp3.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/localforage.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/geolib.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
