Modal after form save

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <nav class="lime darken-1">
+    <nav>
         <div class="nav-wrapper">
             <a href="#" data-target="mobile-menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
             <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
