Home page renewed

--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
                 <a href="#!"><span class="white-text email">Busy Bird</span></a>
             </div>
         </li>
-        <li id="nav_home"><a href="#!">Accueil</a></li>
+        <li id="nav_home"><a href="#!">Tableau de bord</a></li>
         <li id="nav_form_new"><a href="#!">Nouvelle entrée</a></li>
         <li id="nav_form_saved"><a href="#!">Enregistrés</a></li>
         <li id="nav_settings"><a href="#!">Paramètres</a></li>
