Moved sidenav generation to PageManager constructor

--- a/www/index.html
+++ b/www/index.html
@@ -50,27 +50,13 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" data-target="mobile-menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
+            <a href="#" data-target="__sidenav_base_menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
             <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
 
             <a href="#" id="__nav_back_button" class="return-trigger always hide"><i class="material-icons">arrow_back</i></a>
         </div>
     </nav>
-    <ul class="sidenav" id="mobile-menu">
-        <li>
-            <div class="user-view">
-                <div class="background">
-                    <img src="img/sidenav_background.jpg">
-                </div>
-                <a href="#!"><img class="circle" src="img/logo.png"></a>
-                <a href="#!"><span class="white-text email">Busy Bird</span></a>
-            </div>
-        </li>
-        <li id="nav_home"><a href="#!">Tableau de bord</a></li>
-        <li id="nav_form_new"><a href="#!">Nouvelle entrée</a></li>
-        <li id="nav_form_saved"><a href="#!">Enregistrés</a></li>
-        <li id="nav_settings"><a href="#!">Paramètres</a></li>
-    </ul>
+    <ul class="sidenav" id="__sidenav_base_menu"></ul>
 
     <main>
         <div id="main_block">
