--- a/server/form_creator/index.html
+++ b/server/form_creator/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="fr">
 
 <head>
     <!--Import Google Icon Font-->
@@ -9,6 +9,7 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
             <div class="file-field input-field">
                 <div class="btn">
                     <span>Localisations TSV</span>
-                    <input type="file" id="__tsv_file_input">
+                    <input type="file" id="__tsv_file_input" accept="text/tab-separated-values,text/plain">
                 </div>
                 <div class="file-path-wrapper">
                     <input class="file-path validate" type="text">
@@ -64,7 +65,13 @@
             <div class="divider divider-margin"></div>
 
             <div class="row right-align">
-                <button class="btn blue" id="__export_form_btn">Exporter le formulaire</button>
+                <div class="left">
+                    <button class="btn red" id="__reset_form_btn">Remettre à zéro</button>
+                </div>
+                <div class="right">
+                    <button class="btn blue" id="__export_form_btn">Exporter le formulaire</button>
+                </div>
+                <div class="clearb"></div>
             </div>
         </div>
         <div class="row no-margin-bottom">
