--- a/server/form_creator/index.html
+++ b/server/form_creator/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <main>
+    <main style="margin-bottom: 5em;">
         <div id="main_block" class="container">
             <h1>Créateur de formulaire</h1>
             <p class="flow-text">
