Added docs, removed anon classes to named classes Added button for file deletion

--- a/www/index.html
+++ b/www/index.html
@@ -48,14 +48,16 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" data-target="__sidenav_base_menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
-            <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
-
-            <a href="#" id="__nav_back_button" class="return-trigger always hide"><i class="material-icons">arrow_back</i></a>
-        </div>
-    </nav>
+    <div>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" data-target="__sidenav_base_menu" class="sidenav-trigger always"><i class="material-icons">menu</i></a>
+                <a href="#" id="nav_title" class="nav-header-title">Busy Bird</a>
+    
+                <a href="#" id="__nav_back_button" class="return-trigger always hide"><i class="material-icons">arrow_back</i></a>
+            </div>
+        </nav>
+    </div>
     <ul class="sidenav" id="__sidenav_base_menu"></ul>
 
     <main>
