--- a/server/form_creator/index.html
+++ b/server/form_creator/index.html
@@ -15,10 +15,10 @@
 <body>
     <main style="margin-bottom: 5em;">
         <div id="main_block" class="container">
-            <h1>Créateur de formulaire</h1>
+            <h1>Form model creator</h1>
             <p class="flow-text">
-                Insérer les champs souhaités avec le sélecteur de champ, puis exportez votre formulaire
-                grâce au bouton en bas de page.
+                Insert new fields with field selector, then export your model with the
+                appropriated button.
             </p>
 
             <ul class="collection" id="form_collection"></ul>
@@ -27,13 +27,13 @@
 
             <div class="divider divider-margin"></div>
             
-            <h4>Charger localisations</h4>
+            <h4>Load locations</h4>
             <p>
-                Importer des localisations depuis un fichier TSV.
+                Import locations from a Tab-separated file (CSV with tabulations).
             </p>
             <div class="file-field input-field">
                 <div class="btn">
-                    <span>Localisations TSV</span>
+                    <span>TSV location</span>
                     <input type="file" id="__tsv_file_input" accept="text/tab-separated-values,text/plain">
                 </div>
                 <div class="file-path-wrapper">
@@ -45,15 +45,15 @@
             <div class="divider divider-margin"></div>
 
             <!-- File input for file loading -->
-            <h4>Charger formulaire existant</h4>
+            <h4>Load existing model</h4>
             <p>
-                Charger un formulaire écrasera vos précédentes modifications sur la page active.
+                Load a model from file will erase your previous modifications on this page.
             </p>
             <p id="__newfile_info"></p>
 
             <div class="file-field input-field">
                 <div class="btn">
-                    <span>Formulaire JSON</span>
+                    <span>JSON Model</span>
                     <input type="file" id="__newfile_input" accept="application/json">
                 </div>
                 <div class="file-path-wrapper">
@@ -66,10 +66,10 @@
 
             <div class="row right-align">
                 <div class="left">
-                    <button class="btn red" id="__reset_form_btn">Remettre à zéro</button>
+                    <button class="btn red" id="__reset_form_btn">Reset</button>
                 </div>
                 <div class="right">
-                    <button class="btn blue" id="__export_form_btn">Exporter le formulaire</button>
+                    <button class="btn blue" id="__export_form_btn">Export</button>
                 </div>
                 <div class="clearb"></div>
             </div>
