Numerous bug fixes

--- a/www/index.html
+++ b/www/index.html
@@ -76,10 +76,10 @@
                 </div>
             </center>
             <center class="flow-text" style="margin-top: 10px">
-                Bienvenue dans Busy Bird
+                Welcome to Busy Bird
             </center>
             <center id="__init_text_center" style="margin-top: 5px">
-                Initialisation
+                Loading
             </center>
         </div>
         <div class="row no-margin-bottom">
