--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' gap: blob: data: file:; style-src 'self' 'unsafe-inline'; media-src * blob: 'self' filesystem: file: data:; img-src * cdvfile: 'unsafe-inline' blob: filesystem: 'self'" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' gap: blob: data: file:; style-src 'self' 'unsafe-inline'; media-src * blob: 'self' filesystem: file: data:; img-src * android-webview-video-poster: file: cdvfile: 'unsafe-inline' blob: filesystem: 'self'" />
 
     <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
