Updated form creator

--- a/server/form_creator/index.html
+++ b/server/form_creator/index.html
@@ -2,14 +2,14 @@
 
 <head>
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="css/perso.css" media="screen,projection" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <div id="new_item"></div>
 
             <div class="divider divider-margin"></div>
-            
+
             <h4>Load locations</h4>
             <p>
                 Import locations from a Tab-separated file (CSV with tabulations).
@@ -34,10 +34,10 @@
             <div class="file-field input-field">
                 <div class="btn">
                     <span>TSV location</span>
-                    <input type="file" id="__tsv_file_input" accept="text/tab-separated-values,text/plain">
+                    <input type="file" id="__tsv_file_input" accept="text/tab-separated-values,text/plain" />
                 </div>
                 <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
+                    <input class="file-path validate" type="text" />
                 </div>
             </div>
             <div class="clearb"></div>
@@ -47,17 +47,18 @@
             <!-- File input for file loading -->
             <h4>Load existing model</h4>
             <p>
-                Load a model from file will erase your previous modifications on this page.
+                Load a model from file will erase your previous modifications on this
+                page.
             </p>
             <p id="__newfile_info"></p>
 
             <div class="file-field input-field">
                 <div class="btn">
                     <span>JSON Model</span>
-                    <input type="file" id="__newfile_input" accept="application/json">
+                    <input type="file" id="__newfile_input" accept="application/json" />
                 </div>
                 <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
+                    <input class="file-path validate" type="text" />
                 </div>
             </div>
             <div class="clearb"></div>
@@ -83,7 +84,18 @@
     <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container">
-                LBBE - Busy Bird
+                <div class=" left">
+                    LBBE - Busy Bird 
+                </div>
+                <div class="right">
+                    <span id="__login_html_text"></span>
+                    <a href="#!" class="footer-btn" id="__login_html_button">Login</a>
+                    ·
+                    <a href="#!" class="footer-btn" id="__settings_html_button">
+                        Server : <span id="__settings_html_server"></span>
+                    </a>
+                </div>
+                <div class="clearb"></div>
             </div>
         </div>
     </footer>
@@ -91,10 +103,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/Sortable.min.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/elements.js"></script>
-    <script src="js/export.js"></script>
-    <script src="js/form.js"></script>
+    <script src="js/form.js" type="module"></script>
 </body>
 
-</html> 
+</html>
