Can upgrade w/ admin password

--- a/server/form_creator/index.html
+++ b/server/form_creator/index.html
@@ -15,10 +15,20 @@
 <body>
     <main style="margin-bottom: 5em;">
         <div id="main_block" class="container">
-            <h1>Form model creator</h1>
+            <h2>Form model creator</h2>
             <p class="flow-text">
                 Insert new fields with field selector, then export your model with the
                 appropriated button.
+            </p>
+            <p id="__warning-text__" style="display: none">
+                <span style="font-style: italic; font-weight: bold;">Warning</span>: This form creator requires a modern navigator.
+                <br><br>
+                Supported navigators are:<br>
+                - Chrome 61 and up<br>
+                - Firefox 60 and up<br>
+                - Safari 11 and up<br>
+                - Edge 16 and up<br>
+                <span style="font-weight: bold;">Internet Explorer</span> is <span style="font-style: italic;">not</span> supported !
             </p>
 
             <ul class="collection" id="form_collection"></ul>
@@ -47,20 +57,26 @@
             <!-- File input for file loading -->
             <h4>Load existing model</h4>
             <p>
-                Load a model from file will erase your previous modifications on this
-                page.
+                Load a model will erase your previous modifications on this
+                page. You can load from a JSON file or directly from your Busy Bird server.
             </p>
             <p id="__newfile_info"></p>
 
-            <div class="file-field input-field">
-                <div class="btn">
-                    <span>JSON Model</span>
-                    <input type="file" id="__newfile_input" accept="application/json" />
+            <div class="row">
+                <div class="file-field input-field col s8">
+                    <div class="btn">
+                        <span>JSON Model</span>
+                        <input type="file" id="__newfile_input" accept="application/json" />
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text" />
+                    </div>
                 </div>
-                <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text" />
+                <div class="col s4 input-field center">
+                    <button class="btn big light-blue" id="__load_from_server_btn">Load from server</button>
                 </div>
             </div>
+            
             <div class="clearb"></div>
 
             <div class="divider divider-margin"></div>
@@ -99,6 +115,16 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        setTimeout(() => {
+            const e = document.getElementById('__warning-text__');
+
+            if (e) {
+                e.style.display = "block";
+            }
+        }, 500);
+    </script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
