--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,9 @@
     
                 <a href="#" id="__nav_back_button" class="return-trigger always hide"><i class="material-icons">arrow_back</i></a>
             </div>
+            <div class="nav-content hide">
+                <span class="nav-title" id="__nav_title_side"></span>
+            </div>
         </nav>
     </div>
     <ul class="sidenav" id="__sidenav_base_menu"></ul>
